--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>The Forest. | A Personal Site.</title>
+  <title>Realm of Horizon. | A Personal Site.</title>
 </head>
 
 <body id="body">
@@ -51,7 +51,7 @@
       </switch>
     </svg>
     <div id="header-text">
-      <h1 id="title">The&nbsp;Forest.</h1>
+      <h1 id="title">Realm&nbsp;of&nbsp;Horizon.</h1>
       <p id="motto">Learn, create, and let ideas grow.</p>
     </div>
   </header>
