Update blog url

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   </header>
 
   <nav>
-    <span class="nav-entry"><a href="http://www.forestofhorizon.com/">Blog</a></span>
+    <span class="nav-entry"><a href="https://forest.was.blue/">Blog</a></span>
     <span class="nav-entry"><a href="https://github.com/Horizon-Blue">GitHub</a></span>
     <span class="nav-entry"><a href="http://xiaoyan5.web.engr.illinois.edu/">About</a></span>
   </nav>
