--- a/index.html
+++ b/index.html
@@ -55,13 +55,11 @@
       <p id="motto">Learn, create, and let ideas grow.</p>
     </div>
   </header>
-
   <nav>
-    <span class="nav-entry"><a href="https://forest.was.blue/">Blog</a></span>
-    <span class="nav-entry"><a href="https://github.com/Horizon-Blue">GitHub</a></span>
-    <span class="nav-entry"><a href="http://xiaoyan5.web.engr.illinois.edu/">About</a></span>
+    <span class="nav-entry"><a href="https://blog.horizonian.com/">Blog</a></span>
+    <span class="nav-entry"><a href="https://github.com/horizon-blue">GitHub</a></span>
+    <span class="nav-entry"><a href="https://xiaoyan.horizonian.com">About</a></span>
   </nav>
-
   <footer>
     <div>&copy; HorizonBlue, <span id="year">2015</span>.</div>
   </footer>
